--- a/hotelreact/package.json
+++ b/hotelreact/package.json
@@ -6,6 +6,7 @@
     "apexcharts": "^4.5.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
